# openaptx

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE.txt  Makefile.am  README.md  config.h.in  configure.ac  openaptx.pc.in  openaptxhd.pc.in
archive/: README.md
doc/: CMakeLists.txt  Doxyfile.in  Makefile.am
include/: aptx422.h  aptxHD100.h  openaptx.h
src/: CMakeLists.txt  Makefile.am  aptx-ffmpeg.c  aptx-freeaptx.c  aptx-stub.c  aptx422.c  bt-aptx-stub.c  inspect422.c  mathex.h  params.c  params.h  qmf.c  qmf.h  search.h  sonar.aptx  sonar.aptxhd  stub-aptx.c  stub-aptxhd.c
src/aptx422/: encode.c  encode.h  main.c  mathex.h  params.c  params.h  processor.c  processor.h  qmf.c  qmf.h  quantizer.c  quantizer.h  search.c  search.h
src/aptxhd100/: encode.c  encode.h  main.c  mathex.h  params.c  params.h  processor.c  processor.h  qmf.c  qmf.h  quantizer.c  quantizer.h  search.c  search.h
src/sample/: bin2array.c  sonar.aptx  sonar.aptxhd
test/: CMakeLists.txt  Makefile.am  benchmark.sh  heval-422.c  heval-hd100.c  heval422.c  heval422.gdb  inspect-422.c  inspect-422.h  inspect-hd100.c  inspect-hd100.h  inspect-utils.c  inspect-utils.h  inspect422.h
utils/: CMakeLists.txt  Makefile.am  aptx-decode.c  aptx-encode.c  aptx-info.c  aptxdec.c  aptxenc.c
